--- a/views/calc.html
+++ b/views/calc.html
@@ -3,4 +3,21 @@
 
 <br>
 
-<p>{{risk}}</p>
+
+
+
+
+last 24hrs of sleep: <select ng-model="hour24">
+    <option ng-repeat="hour in hoursInADay track by $index" value="{{$index}}">{{$index}}</option>
+</select>  <br />
+last 48hrs of sleep:<input ng-model="hour48" /><br />
+time at work: <input ng-model="workHours" /><br />
+<input type="button" ng-click="calcRisk()" value="Calculate my fatigue factor" />
+
+<p>This is the fatigue value: {{risk}}</p>
+
+<br /><br />
+
+<div ng-repeat="x in hoursInADay track by index">
+    hey{{$index}}</br />
+</div>
