--- a/views/templates/buttons.html
+++ b/views/templates/buttons.html
@@ -1,3 +1,3 @@
-<a href="#/calc">Calc</a>
+<a href="#/calc" data-toggle="dropdown">Calc</a>
 <a href="#/about">About</a>
 <a href="#/alarm">Alarm</a>
