--- a/views/templates/buttons.html
+++ b/views/templates/buttons.html
@@ -1,3 +1,6 @@
-<a href="#/calc" data-toggle="dropdown">Calc</a>
-<a href="#/about">About</a>
-<a href="#/alarm">Alarm</a>
+<div class="btn-group" data-toggle="buttons-checkbox">
+  <a type="button" class="btn btn-primary" href="#/calc">Calc</a>
+  <a type="button" class="btn btn-primary" href="#/alarm">Alarm</a>
+  <a type="button" class="btn btn-primary" href="#/about">About</a>
+  <a type="button" class="btn btn-primary" href="#/user">User</a>
+</div>
