--- a/views/user.html
+++ b/views/user.html
@@ -1,4 +1,19 @@
 Select your name: 
-<select ng-model="CurrentUser.user">
-    <option ng-repeat="employee in DataFactory" value="{{employee.name}}">{{employee.name}}</option>
+<select ng-model="CurrentUser.user" ng-options="employee as employee.name for employee in DataFactory">
+    <option ng-repeat="employee in DataFactory" value="{{$index}}">{{employee.name}}</option>
 </select>  <br /><br />
+    <button ng-click="getShifts()" type="submit">getShifts</button>
+
+<ul>
+    <li ng-repeat="shift in schedule">
+        <ul>
+            <li>
+                <p>Start time: {{shift.start}}</p>
+            </li>
+            <li>
+                <p>end time: {{shift.end}}</p>
+            </li>
+        </ul>
+    </li>
+</ul>
+<hr>
