changed to accordian style

--- a/views/alarm.html
+++ b/views/alarm.html
@@ -1,9 +1,15 @@
-<u>{{message}}</u>
-<br>
-<p>{{clock}}</p>
-<br>
-<div id="txt">{{today}}</div>
-<br>
+<div ng-controller="AlarmController">
 
+<h3>Alarm</h3>
+<div>
+    <u>{{message}}</u>
+    <br>
+    <p>{{clock}}</p>
+    <br>
+    <div id="txt">{{today}}</div>
+    <br>
+</div>
+
+</div>
 
 
