--- a/views/templates/buttons.html
+++ b/views/templates/buttons.html
@@ -1,6 +1,8 @@
-<div class="btn-group" data-toggle="buttons-checkbox">
-  <a type="button" class="btn btn-primary" href="#/calc">Calc</a>
-  <a type="button" class="btn btn-primary" href="#/alarm">Alarm</a>
-  <a type="button" class="btn btn-primary" href="#/about">About</a>
-  <a type="button" class="btn btn-primary" href="#/user">User</a>
+<div id="nav-buttons" ng-controller="TotalController" >
+  <a type="button" class="btn btn-primary" href="#/user">User Info</a>
+  <div class="btn-group group-buttons" data-toggle="buttons-checkbox">
+    <a type="button" class="btn btn-primary" href="#/calc">Fatigue Factor</a>
+    <a type="button" class="btn btn-primary" href="#/alarm">Alarm</a>
+    <a type="button" class="btn btn-primary" href="#/about">About</a>
+  </div>
 </div>
