--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,8 @@
-@charset "UTF-8";
 /* CSS Document */
 html, body {
   margin: 0;
   padding: 0;
+  width: 100%;
 }
  
 div,block,h1,h2,h3,h4,h5,p,ul,li,section,textarea { /* perform CSS reset */
@@ -10,64 +10,42 @@ div,block,h1,h2,h3,h4,h5,p,ul,li,section,textarea { /* perform CSS reset */
   padding: 0;
 }
 
-.ui-field-contain {
-	padding: .75em 0;	
+#nav-buttons {
+	text-align: center;
+	padding: 5px 0;
 }
-.ui-footer h4.ui-title {
-font-size: 11px;
-	margin: .6em 0;
+
+.group-buttons {
+	width: 98%;
+	margin: 0 1%;
+	text-align: center;
 }
-h3 {
-	margin-bottom: 0px;
+
+#page-title {
+	text-align: center;
+	width: 100%;
 }
-h3 + p {
-	margin-top: 0;	
+
+.btn-primary {
+	width: 33%;
+	
 }
-/*
-.ui-btn-active {
-	background-image:-moz-linear-gradient(top, #FADB4F, #F90);
-	background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0, #FADB4F), color-stop(1, #F90));
-	-msfilter:"progid:DXImageTransform.Microsoft.gradient(startColorStr='#FF9900', EndColorStr='#FADB4F')";
+
+.odd {
+	background-color: blue;
 }
-*/
-div .ui-grid-a ul li {
-	padding-bottom: 6px;
-	list-style-type:none;
+
+.even {
+	background-color: green;
 }
-div .ui-grid-a ul, div .ui-grid-b ul {
-	padding-left: 0;
-	padding-right: 15px;	
+
+#blankArea{
+	text-align:center;
+	position: relative;
 }
-.ui-bar-b {
-	border:1px solid #f7c942;
-	background:#fadb4e;
-	color:#333;
-	text-shadow:0 1px 0 #fff;
-	background-image:-moz-linear-gradient(top, #fceda7, #fadb4e);
-	background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0, #fceda7), color-stop(1, #fadb4e));
-	-msfilter:"progid:DXImageTransform.Microsoft.gradient(startColorStr='#fceda7', EndColorStr='#fadb4e')"
-}
-.ui-btn-hover-b {
-	border:1px solid #e79952;
-	background:#fbe26f;
-	font-weight:bold;
-	color:#111;
-	text-decoration:none;
-	text-shadow:0 1px 1px #fff;
-	background-image:-moz-linear-gradient(top, #fcf0b5, #fbe26f);
-	background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0, #fcf0b5), color-stop(1, #fbe26f));
-	-msfilter:"progid:DXImageTransform.Microsoft.gradient(startColorStr='#fcf0b5', EndColorStr='#fbe26f')"
-}
-.ui-btn-up-b {
-	border:1px solid #f7c942;
-	background:#fadb4e;
-	font-weight:bold;
-	color:#333;
-	cursor:pointer;
-	text-shadow:0 1px 1px #fe3;
-	text-decoration:none;
-	text-shadow:0 1px 0 #fff;
-	background-image:-moz-linear-gradient(top, #fceda7, #fadb4e);
-	background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0, #fceda7), color-stop(1, #fadb4e));
-	-ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorStr='#fceda7', EndColorStr='#fadb4e')"
+
+.img{
+	text-align: center;
+	position: relative;
+	
 }
