--- a/views/user.html
+++ b/views/user.html
@@ -2,18 +2,18 @@
 
 <h3>User</h3>
 <div>
-    Select your name: 
+ <!--   Select your name: 
     <select ng-model="CurrentUser.user" ng-options="employee as employee.name for employee in DataFactory">
         <option ng-repeat="employee in DataFactory" value="{{$index}}">{{employee.name}}</option>
-    </select>  
+    </select-->  
         
     <br /><br />
         <button ng-click="getShifts()" type="submit">getShifts</button>
     
-    {{Time.updateShifts(CurrentUser.user)}} 
+    {{scope.update()}}
     
     <ul>
-        <li ng-repeat="shift in schedule">
+        <li ng-repeat="shift in CurrentUser.orderedSchedule = (schedule | orderBy:Time.getSortingDate:false)">
             <span ng-class-odd="'odd'" ng-class-even="'even'"><p>Start time: {{Time.makeDate(shift.start)}} 
             {{Time.makeTime(shift.start)}}</p>
             <p>end time: {{Time.makeDate(shift.end)}} 
