--- a/views/about.html
+++ b/views/about.html
@@ -1,7 +1,46 @@
 <div ng-controller="AboutController">
 
     
-<b>{{message}}</b>
+<p>Sleeping is really important. Here is a chart:</p><br />
+
+<table>
+    <tr>
+        <td>Score </td>
+        <td>Risk</td>
+        <td>Response/Actions</td></tr>
+    <tr>
+        <td>9 or more
+        </td>
+        <td>High
+        </td>
+        <td>Document externally, do not engage in any safety 
+        critical work and do not recommence until fit for 
+        work.
+        </td>
+    </tr>
+    <tr>
+        <td>5 - 8 </td>
+        <td>Moderate </td>
+        <td>Report to supervisor and document. Organise 
+        supervisory checks. Complete symptom checklist 
+        and task re-assignment.
+        </td>
+    </tr>
+    <tr>
+        <td>1 - 4</td>
+        <td>Low</td>
+        <td>Report to the supervisor and document. Undertake 
+        approved individual control measures. Self-monitor 
+        for symptoms, team monitoring by colleagues and 
+        task rotation.
+        </td>
+    </tr>
+        <td>0 </td>
+        <td>n/a</td>
+        <td>Remain with working existing arrangements unless 
+        higher level hazards are present.</td>
+    </tr>
+</table>
 
 </div>
 
