--- a/views/alarm.html
+++ b/views/alarm.html
@@ -2,12 +2,11 @@
 
 <h3>Alarm</h3>
 <div>
-    <u>{{message}}</u>
-    <br>
-    <p>{{clock}}</p>
-    <br>
-    <div id="txt">{{today}}</div>
-    <br>
+  <hr/>
+  <!--Date format: <input ng-model="format"> <hr/>-->
+  Current time is: <span my-current-time="format"></span>
+   <br>
+
 </div>
 
 </div>
