--- a/views/calc.html
+++ b/views/calc.html
@@ -1,21 +1,14 @@
 <div ng-controller="CalcController">
-
-<h3>Fatigue Factor</h3>
-<div>
-    <h2>Current User: {{CurrentUser.user.name}}</h2><br />
-    <br />
+    <h3>User: {{CurrentUser.user.name}}</h3><br />
     Your next shift is:<br />
     
     <!--call some function here, if the dates of shift[0] have alreayd passed,
     remove it from the function and insted call the next one-->
     <ul>
         <li>Start time: {{Time.makeDate(CurrentUser.user.shifts[0].start)}} {{Time.makeTime(CurrentUser.user.shifts[0].start)}}</li>
-        <li>End time: {{Time.makeDate(CurrentUser.user.shifts[0].end)}} {{Time.makeTime(CurrentUser.user.shifts[0].end)}}</li>
+        <li>End time: &nbsp&nbsp{{Time.makeDate(CurrentUser.user.shifts[0].end)}} {{Time.makeTime(CurrentUser.user.shifts[0].end)}}</li>
     </ul>
     
-    <input type="button" ng-click="toggleCalc=!toggleCalc" value="Toggle calculator">
-    
-    <div ng-show="toggleCalc">
         Hours slept in last 24 hours (including naps): 
         <select ng-model="hour24">
         <option
@@ -24,17 +17,19 @@
           {{$index}}
         </option>
         </select>
-         <input type="button" ng-click="calcRisk()" value="Calculate my fatigue factor" />
-        <br />
+         <input class="nav-buttons" type="button" ng-click="calcRisk()" value="Calculate my fatigue factor" />
         
         
         <br />
         <div ng-show="showFatigueFactor">
             <p>This is the fatigue value: {{risk}}</p>
         </div>
-    </div>
-    
-    <br /><br />
-</div>
 
+    
+    <input class="nav-buttons" type="button" ng-click="InitChart()" value="Generate Fatigue Factor Graph"/>
+    <div id="graph-content" ng-show="showGraph">
+        This is the graph:<br />
+        <svg id="visualisation" width="300px" height="300px"></svg>
+    </div>
+    <br />
 </div>
