--- a/views/templates/buttons.html
+++ b/views/templates/buttons.html
@@ -1,4 +1,4 @@
-<div id="nav-buttons" ng-controller="TotalController" >
+<div id="navButtons" ng-controller="TotalController" >
   <a type="button" class="btn btn-primary" href="#/user">User Info</a>
   <div class="btn-group group-buttons" data-toggle="buttons-checkbox">
     <a type="button" class="btn btn-primary" href="#/calc">Fatigue Factor</a>
